Create two recipes.
One for burger and one for pizza. The webpages are aight.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage of odin-recipes</title>
+    <title>Homepage of Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+    <ul>
+        <li><a href="./recipes/burger.html" target="_blank" rel="noopener noreferrer">Burger Recipe</a></li>
+        <li><a href="./recipes/pizza.html" target="_blank" rel="noopener noreferrer">Pizza Recipe</a> </li>
+    </ul>
 </body>
 </html>
